--- a/css/style.css
+++ b/css/style.css
@@ -19,25 +19,14 @@
 
 /*remove default margin*/
 /*Header start*/
-header {
+.header-container {
   height: auto;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: #125c13;
+  background-color: #125C13;
 }
-header section {
-  display: flex;
-  justify-content: space-around;
-  width: 10%;
-  align-items: center;
-  margin: 10px;
-}
-header section .section-sales {
-  background-color: #E8E1D9;
-  align-items: center;
-}
-header section a img {
+.header-container .header-logo a img {
   width: 100px;
   height: 100px;
   margin: 3px;
@@ -45,33 +34,39 @@ header section a img {
   -moz-box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
 }
-
-header section nav ul {
+.header-container .header-navegable .navegable-menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-header section nav ul li {
+  width: 90%;
+  height: 100px;
   list-style: none;
 }
-header section nav ul li a {
+.header-container .header-navegable .navegable-menu .navegable-item {
   margin-left: 20px;
   margin-right: 20px;
-  font-family: "Macondo", "cursive";
+  text-decoration: none;
+  font-family: "Playfair Display", serif;
+  font-size: 20px;
   font-weight: 1px;
   color: #E8E1D9;
   text-transform: uppercase;
-  text-shadow: 3px 3px 3px black;
-  text-decoration: none;
-  font-size: 22px;
+  text-shadow: 2px 2px 2px black;
 }
-header section nav ul li a:hover {
+.header-container .header-navegable .navegable-menu .navegable-item:hover {
   color: #F4A442;
   text-shadow: none;
   transition: 1s;
 }
-
-header section img {
+.header-container .header-sales {
+  display: flex;
+  justify-content: space-around;
+  width: 10%;
+  background-color: #E8E1D9;
+  align-items: center;
+  margin: 20px;
+}
+.header-container .header-sales .sales-img {
   width: 40px;
   height: 40px;
 }
@@ -142,48 +137,88 @@ footer div ul li a:hover {
 /*colores*/
 /*nueva*/
 /*font-family: 'Macondo', cursive;*/
-.index section .itemjar {
+.index .carrusel-container {
+  width: 100%;
+  margin: auto;
+  overflow: hidden;
+}
+.index .carrusel-container ul {
   display: flex;
   padding: 0;
   width: 300%;
   animation: itemjar 20s linear infinite;
 }
-.index section .itemjar li {
+@keyframes itemjar {
+  0% {
+    margin-left: 0;
+  }
+  30% {
+    margin-left: 0;
+  }
+  35% {
+    margin-left: -100%;
+  }
+  55% {
+    margin-left: -100%;
+  }
+  60% {
+    margin-left: -200%;
+  }
+  100% {
+    margin-left: -200%;
+  }
+}
+.index .carrusel-container ul li {
   list-style: none;
   width: 100%;
 }
-.index section .itemjar li a img {
+.index .carrusel-container ul li a img {
   width: 100%;
 }
-.index section .article-container {
+.index .article-container {
+  width: 100%;
+  height: 100%;
   display: flex;
+  margin: 5px;
   justify-content: center;
   align-items: space-around;
-  background-color: #F0BB62;
+  background-color: hsla(36deg, 94%, 25%, 0.61);
 }
-.index section .carrusel-container {
-  width: 100%;
-  margin: auto;
-  overflow: hidden;
-}
-.index section div .martin {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/hombre3.png);
-}
-.index section div .lombriz {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/lombriz.png);
-}
-.index section div .aflorales {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/arreglof.png);
-}
-.index section div h2 {
-  font-size: 30px;
-  text-transform: uppercase;
-  font-family: "Roboto", "sans-serif";
-  color: #E8E1D9;
-  margin-bottom: 10px;
-}
-.index section div p {
+.index .article-container .aflorales {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/arreglof.png);
+}
+.index .article-container .lombriz {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/lombriz.png);
+}
+.index .article-container .martin {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/hombre3.png);
 }
 
 /*colores*/
