--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,75 +1,59 @@
 /*Header start*/
-header {
+.header-container{
     height: auto;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    background-color: #125c13;
-
-    section {
+    background-color: #125C13;
+    .header-logo{
+        a{
+            img{
+                width: 100px;
+                height: 100px;
+                margin:3px;
+                -webkit-box-shadow: 10px 10px 6px 1px rgba(0,0,0,0.75);
+                -moz-box-shadow: 10px 10px 6px 1px rgba(0,0,0,0.75);
+                box-shadow: 10px 10px 6px 1px rgba(0,0,0,0.75);
+            }
+        }
+    }
+    .header-navegable{
+        .navegable-menu{
+            .navegable-item{
+                &:hover{
+                    color: #F4A442;
+                    text-shadow: none;
+                    transition: 1s;
+                }
+                margin-left: 20px;
+                margin-right: 20px;
+                text-decoration: none;
+                font-family: 'Playfair Display', serif;
+                font-size: 20px;    
+                font-weight: 1px;
+                color: #E8E1D9;
+                text-transform: uppercase;
+                text-shadow: 2px 2px 2px black;
+            }
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
+            height: 100px;
+            list-style: none;
+        }
+    }
+    .header-sales{
+        .sales-img{
+            width: 40px;
+            height: 40px;
+        }        
         display: flex;
         justify-content: space-around;
         width: 10%;
+        background-color:#E8E1D9;
         align-items: center;
-        margin: 10px;
-
-        .section-sales {
-            background-color: #E8E1D9;
-            align-items: center;
-        }
-
-        a {
-            img {
-                width: 100px;
-                height: 100px;
-                margin: 3px;
-                -webkit-box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
-                -moz-box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
-                box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
-            }
-        }
-    }
-}
-
-header {
-    section {
-        nav {
-            ul {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-               
-                li {
-                    list-style: none;
-                    a {
-                        margin-left: 20px;
-                        margin-right: 20px;
-                        font-family: $special-font;
-                        font-weight: 1px;
-                        color: #E8E1D9;
-                        text-transform: uppercase;
-                        text-shadow: 3px 3px 3px black;
-                        text-decoration: none;
-                        font-size: 22px;
-
-                        &:hover {
-                            color: #F4A442;
-                            text-shadow: none;
-                            transition: 1s;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-header {
-    section {
-        img {
-            width: 40px;
-            height: 40px;
-        }
+        margin: 20px;    
     }
 }
 
