--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -1,57 +1,84 @@
 @import "../base/mixin";
 @import '../base/variable';
-//section one carrusel
-.index {
-    section {
-        .itemjar {
+.index{
+    .carrusel-container{
+        width: 100%;
+        margin: auto;
+        overflow: hidden;
+        ul{
             display: flex;
             padding: 0;
             width: 300%;
             animation: itemjar 20s linear infinite;
-
-            li {
+            @keyframes itemjar {
+                0%{margin-left: 0;}
+                30%{margin-left: 0;}
+            
+                35%{margin-left: -100%;}
+                55%{margin-left: -100%;}
+            
+                60%{margin-left:-200%;}
+                100%{margin-left: -200%;}
+            }
+            li{
                 list-style: none;
                 width: 100%;
-                
-                a {
-                    img {
-                        width: 100%;
+                a{
+                    img{
+                        width:100%;
+
                     }
                 }
             }
         }
-        .article-container {
+
+    }
+    .article-container{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        margin:5px;
+        justify-content: center;
+        align-items: space-around;
+        background-color: hsla(36, 94%, 25%, 0.61);
+        .aflorales{
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 50vh;
+            margin: 5px;
             display: flex;
             justify-content: center;
-            align-items: space-around;
-            background-color: $Special;
+            flex-direction: column;
+            text-align: center;
+            background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/arreglof.png);
         }
-        .carrusel-container {
-            width: 100%;
-            margin: auto;
-            overflow: hidden;
+        .lombriz{
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 50vh;
+            margin: 5px;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            text-align: center;
+            background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/lombriz.png);
+        }
+        .martin{
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 50vh;
+            margin: 5px;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            text-align: center;
+            background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/hombre3.png);
         }
 
-        div{
-            .martin{
-               background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../../images/hombre3.png);
-            }
-           .lombriz{
-                background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../../images/lombriz.png);
-            }
-            .aflorales{
-               background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../../images/arreglof.png);
-            }
-            h2{
-                font-size: 30px;
-                text-transform: uppercase;
-                font-family: $regular-font;
-                color:#E8E1D9;
-                margin-bottom: 10px;
-            }
-            p{
-                text-align: center;
-            }
-        }
     }
+
 }
+
