--- a/scss/sections/_workshop.scss
+++ b/scss/sections/_workshop.scss
@@ -1,27 +1,9 @@
-.workshop-container {
+.workshop-container{
     height: 80vh;
     width: 100%;
-
-    .container-item {
-        display: flex;
-        align-items: center;
-        margin: 10px;
-        background-color: #3e7c1783;
-
-        .two {
-            flex-direction: row-reverse;
-            align-items: center;
-            justify-content: space-between;
-            margin-left: 10px;
-        }
-
-        .workshop-item {
-            flex-direction: column;
-            width: 50%;
-        }
-
-        h2 {
-            .item-title {
+    .container-item{
+        .workshop-item{
+            .workshop-title{
                 font-family: 'Playfair Display', serif;
                 font-family: 'Poppins', sans-serif;
                 font-size: 30px;
@@ -32,8 +14,33 @@
                 padding: 10px;
                 border-radius: 15px;
             }
-
-            .item-title2 {
+            .workshop-text{
+                font-family: 'Playfair Display', serif;
+                font-size: 15px;
+                line-height: 1.5;
+                margin-top: 20px;
+                margin-left: 40px;
+                font-weight: bold;
+                text-align: center;
+            }            
+            flex-direction: column;
+            width: 50%;
+        }        
+        display: flex;
+        align-items: center;
+        background-color: #3e7c1783;       
+    }
+    .container-itemtwo{
+        .workshop-item{
+            .workshop-text2{
+                font-family: 'Playfair Display', serif;
+                font-size: 15px;
+                line-height: 1.5;
+                font-weight: bold;
+                margin-top: 20px;
+                text-align: center;  
+            }            
+            .workshop-title2{
                 font-family: 'Playfair Display', serif;
                 font-family: 'Poppins', sans-serif;
                 font-size: 30px;
@@ -42,29 +49,16 @@
                 background-color: #F4A442;
                 margin-left: 20px;
                 padding: 10px;
-                border-radius: 15px;
+                border-radius: 15px; 
             }
-        }
-
-        p {
-            .item-text {
-                font-family: 'Playfair Display', serif;
-                font-size: 15px;
-                line-height: 1.5;
-                margin-top: 20px;
-                margin-left: 40px;
-                font-weight: bold;
-                text-align: center;
-            }
-
-            .item-text2 {
-                font-family: 'Playfair Display', serif;
-                font-size: 15px;
-                line-height: 1.5;
-                font-weight: bold;
-                margin-top: 20px;
-                text-align: center;
-            }
-        }
+            
+            flex-direction: column;
+            width: 50%;
+        }        
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #3e7c1783;
     }
 }
