--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,79 +1,66 @@
-footer {
-    height: auto;
+//footer start
+.footer-container{
+    height: 50%;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     background-color: #125C13;
-
-    div {
-        .footer-logo {
-            width: 100px;
-            height: 100px;
-            /*margin-top: 10px;
-            margin-left: 5px;*/
-            -webkit-box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
-            -moz-box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
-            box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
+        .footer-navegable{
+            .item{
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                margin-right: 20px;
+                margin-top: 5px;
+                width: 30%;
+                height: auto;
+            }
+            .list{
+                text-decoration: none;
+                font-family: 'Akshar', sans-serif;
+                font-family: 'Josefin Sans', sans-serif;
+                font-family: 'Playfair Display', serif;
+                font-size: 10px;    
+                font-weight: 1px;
+                color: #E8E1D9;
+                text-transform: uppercase;
+                text-shadow: 2px 2px 2px black;
+                line-height: 2;
+                &:hover{
+                    color: #F4A442;
+                    text-shadow: none;
+                    transition: 1s;                 
+                }
+            }              
         }
-
-        .footer-map {
-         margin-top: 20px;
-        }
-
-        .footer-redes {
+        .footer-redes{
             display: flex;
+            justify-content: center;
+            align-content: center;
             flex-direction: column;
             background-color: #E8E1D9;
             margin-top: 5px;
+            margin-bottom: 5px;
             padding: 3px;
             border: solid 2px black;
-        }
-    }
-}
-
-footer {
-    div {
-        img {
-            width: 30px;
-            height: 30px;
-            margin: 5px;
-            border: solid 2px black;
-        }
-
-    }
-}
-
-footer {
-    div {
-        ul {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-
-            li {
-                margin-right: 20px;
-                width: 30%;
-                height: auto;
-                list-style: none;
-
-                a {
-                    text-decoration: none;
-                    font-family: $regular-font;
-                    font-size: 10px;
-                    color: #E8E1D9;
-                    text-transform: uppercase;
-                    text-shadow: 2px 2px 2px black;
-                    line-height: 1;
-
-                    &:hover {
-                        color: #F4A442;
-                        text-shadow: none;
-                        transition: 1s;
-                    }
-
-                }
+            .img{
+                width: 30px;
+                height: 30px;
+                margin: 5px;
+                border: solid 2px black; 
             }
+        }        
+        .footer-map{
+            margin-top: 15px; 
+        }        
+        .footer-logo{
+            width: 100px;
+            height: 100px;
+            margin-top:10px;
+            margin-left: 5px;
+            -webkit-box-shadow: 10px 10px 6px 1px rgba(0,0,0,0.75);
+            -moz-box-shadow: 10px 10px 6px 1px rgba(0,0,0,0.75);
+            box-shadow: 10px 10px 6px 1px rgba(0,0,0,0.75);   
         }
-    }
 }
+//footer end
