--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -1,10 +1,10 @@
-@import "../base/mixin";
-@import '../base/variable';
+//Index start
 .index{
     .carrusel-container{
         width: 100%;
-        margin: auto;
+        height: 70vh;
         overflow: hidden;
+        object-fit: cover;
         ul{
             display: flex;
             padding: 0;
@@ -35,7 +35,7 @@
     }
     .article-container{
         width: 100%;
-        height: 100%;
+        height: 50vh;
         display: flex;
         margin:5px;
         justify-content: center;
@@ -45,40 +45,37 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            height: 50vh;
             margin: 5px;
             display: flex;
             justify-content: center;
             flex-direction: column;
             text-align: center;
-            background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/arreglof.png);
+            background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/index/arreglof.png);
         }
         .lombriz{
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            height: 50vh;
             margin: 5px;
             display: flex;
             justify-content: center;
             flex-direction: column;
             text-align: center;
-            background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/lombriz.png);
+            background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/index/lombriz.png);
         }
         .martin{
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            height: 50vh;
             margin: 5px;
             display: flex;
             justify-content: center;
             flex-direction: column;
             text-align: center;
-            background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/hombre3.png);
+            background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/index/hombre3.png);
         }
 
     }
 
 }
-
+//index End
