--- a/scss/sections/_productos.scss
+++ b/scss/sections/_productos.scss
@@ -1,30 +1,32 @@
-@import '../base/variable';
+//@import '../base/variable';
 .grid-container{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-auto-rows: auto;
     gap: 15px;
     margin:5px;
-    div{
+    .grid-producto{
         position: relative;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            -webkit-box-shadow: 11px 17px 14px -4px rgba(0,0,0,0.75);
-            -moz-box-shadow: 11px 17px 14px -4px rgba(0,0,0,0.75);
-            box-shadow: 11px 17px 14px -4px rgba(0,0,0,0.75);
-        }
-        p{
+        .grid-texto{
             bottom: 0;
             position: absolute;
-            color: $white;
+            color:white;
             background-color:rgba(0, 0, 0, 0.502);
             text-transform: uppercase;
             font-family: 'Akshar', sans-serif;
             font-family: 'Josefin Sans', sans-serif;
             font-family: 'Playfair Display', serif;
             margin-left: 3px;
+        }
+        .grid-foto{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            -webkit-box-shadow: 11px 17px 14px -4px rgba(0,0,0,0.75);
+            -moz-box-shadow: 11px 17px 14px -4px rgba(0,0,0,0.75);
+            box-shadow: 11px 17px 14px -4px rgba(0,0,0,0.75);
+        
+
         }
     }
 }
